<resources>
    <string name="app_name">GoDarda</string>
    <string name="godarda">GoDarda</string>
    <string name="founder">By Shubham Darda</string>
    <string name="logo">Logo</string>
    <string name="app_version">App Version %1$s</string>
    <string name="share_via">Share via</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="maintenance_message">App is temporarily down for scheduled improvements; exciting updates are on the way!</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
</resources>