<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/logo_error"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/rounded_background"
        android:contentDescription="@string/logo"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/maintenance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/under_maintenance"
        android:textColor="@color/maintenance_text_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/maintenance_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/maintenance_message"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/exit_button_app_down"
            style="@style/ExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>